# ttwa

./: .gitignore  LICENSE  README.md  cdk.json  pyproject.toml  requirements.txt
docker/: Dockerfile  app.py  requirements.txt
src/ttwa/: deployment.py
